[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
actix-web = "4.8.0"
[dev-dependencies]
reqwest = "0.11"

[[bin]]
path = "src/main.rs"
name = "zero2prod"